--- a/virtual-campus/src/main/java/seu/virtualcampus/md/订单详情功能实现文档.md
+++ b/virtual-campus/src/main/java/seu/virtualcampus/md/订单详情功能实现文档.md
@@ -9,6 +9,7 @@
 ### 1. 页面结构
 
 **FXML文件**: `order_detail.fxml`
+
 - **基本信息区域**: 2x4网格布局展示订单核心信息
 - **商品清单区域**: TableView展示订单包含的所有商品
 - **操作按钮区域**: 确认收货和返回首页按钮
@@ -39,10 +40,12 @@ private void loadOrderDetail()
 ### 3. API接口集成
 
 #### 获取订单详情
+
 - **请求**: `GET /api/orders/{orderId}`
 - **响应**: 包含订单基本信息和商品清单的完整数据
 
 #### 确认收货
+
 - **请求**: `PUT /api/orders/{orderId}/confirm`
 - **功能**: 将订单状态更新为"已确认"
 - **权限**: 仅当订单状态为 PAID/SHIPPED/DELIVERED 时可操作
@@ -82,12 +85,14 @@ private void updateButtonVisibility(String status) {
 ## 🎨 界面设计
 
 ### 样式特色
+
 - **现代化设计**: 使用圆角、阴影、渐变等视觉效果
 - **信息层次**: 通过字体大小、颜色、间距区分信息重要性
 - **响应式布局**: GridPane和VBox布局适应不同内容长度
 - **状态指示**: 不同订单状态使用不同颜色标识
 
 ### 颜色系统
+
 - 主要信息: `#2d3a4a` (深蓝灰)
 - 强调内容: `#007bff` (蓝色)、`#e74c3c` (红色)
 - 成功操作: `#28a745` (绿色)
@@ -99,16 +104,24 @@ private void updateButtonVisibility(String status) {
 
 ```java
 // 在订单列表或其他页面中打开订单详情
-FXMLLoader loader = new FXMLLoader(getClass().getResource("/seu/virtualcampus/ui/order_detail.fxml"));
+FXMLLoader loader = new FXMLLoader(getClass().getResource("/seu/virtualcampus/ui/shop/order_detail.fxml"));
 Parent root = loader.load();
 
 OrderDetailController controller = loader.getController();
-controller.setOrderId("123"); // 设置要查看的订单ID
+controller.
+
+setOrderId("123"); // 设置要查看的订单ID
 
 Stage stage = new Stage();
-stage.setTitle("订单详情");
-stage.setScene(new Scene(root));
-stage.show();
+stage.
+
+setTitle("订单详情");
+stage.
+
+setScene(new Scene(root));
+        stage.
+
+show();
 ```
 
 ### 独立页面使用
